# OOP-LABS-laba4

./: CMakeLists.txt  README.md
src/: Array.h  Figure.h  Point.h  Rectangle.h  Square.h  Triangle.h  main.cpp
tests/: FigureTests.cpp
